# kde-thumbnailer-apk

./: CMakeLists.txt  README.md  apk.xml  apkcreator.cpp  apkcreator.h  apkthumbnail.desktop  test.cpp
